# dundie-rewards

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.py  test-result.xml
.github/workflows/: main.yaml  main.yml
assets/: database.db  database.exemple.json  database.json  people.csv
docs/: how_to_install.md  how_to_use.md  roadmap.md
dundie/: VERSION.txt  __main__.py  cli.py  core.py  database.py  models.py  settings.py
dundie/utils/: db.py  email.py  exchange.py  json_serealizer.py  log.py  login.py  permission.py  user.py
integration/: conftest.py  test_add.py  test_load.py  test_movements.py  test_remove.py  test_show.py  test_transfer.py
migrations/: env.py
migrations/versions/: 08db4faa9f4d_adicionado_o_campo_currency_em_person.py  41523ee7e23e_initial.py  730a13336262_adicionado_o_campor_currency_em_person.py  8bbb6dc77ef8_initial.py
tests/: conftest.py  constants.py  test_add.py  test_database.py  test_email.py  test_exchange.py  test_generating_json_file.py  test_load.py  test_login.py  test_movements.py  test_permission.py  test_read.py  test_transfer.py  test_user.py  test_utils.py
tests/assets/: people.csv
